Adding source of ReLaunch 1.4.4 downloaded from www.the-ebook.org