@@ -1,38 +1,24 @@
 package com.harasoft.relaunch;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-
-import android.R.integer;
 import android.app.Activity;
 import android.app.AlarmManager;
 import android.app.AlertDialog;
-import android.content.Context;
-import android.content.DialogInterface;
-import android.content.Intent;
-import android.content.SharedPreferences;
+import android.content.*;
 import android.content.SharedPreferences.OnSharedPreferenceChangeListener;
 import android.os.Bundle;
-import android.preference.CheckBoxPreference;
-import android.preference.EditTextPreference;
-import android.preference.ListPreference;
-import android.preference.Preference;
-import android.preference.PreferenceActivity;
-import android.preference.PreferenceCategory;
-import android.preference.PreferenceManager;
-import android.preference.PreferenceScreen;
+import android.os.SystemClock;
+import android.preference.*;
 import android.text.InputType;
-import android.view.LayoutInflater;
-import android.view.View;
+import android.view.*;
 import android.view.inputmethod.InputMethodManager;
 import android.widget.EditText;
 import android.widget.ImageButton;
-import android.widget.ListAdapter;
 import android.widget.ListView;
-import android.os.SystemClock;
-import android.view.MotionEvent;
+
+import java.io.File;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 public class PrefsActivity extends PreferenceActivity implements
 		OnSharedPreferenceChangeListener {
@@ -40,11 +26,13 @@ public class PrefsActivity extends PreferenceActivity implements
 	final String TAG = "PreferenceActivity";
 	final static public int TYPES_ACT = 1;
 	final static public int FILTS_ACT = 2;
+	private static String BACKUP_DIR;
 
 	ReLaunchApp app;
 	List<String> applicationsArray;
 	CharSequence[] applications;
 	CharSequence[] happlications;
+    static boolean baseChange = false;
 
 	SharedPreferences prefs;
 	boolean do_pref_subrequest = true;
@@ -68,13 +56,13 @@ public class PrefsActivity extends PreferenceActivity implements
 		for (String key : keys) {
 			Object value = oldPrefs.get(key);
 			if (value instanceof Boolean) {
-				editor.putBoolean(key, ((Boolean) value).booleanValue());
+				editor.putBoolean(key, (Boolean) value);
 			} else if (value instanceof Float) {
-				editor.putFloat(key, ((Float) value).floatValue());
+				editor.putFloat(key, (Float) value);
 			} else if (value instanceof Integer) {
-				editor.putInt(key, ((Integer) value).intValue());
+				editor.putInt(key, (Integer) value);
 			} else if (value instanceof Long) {
-				editor.putLong(key, ((Long) value).longValue());
+				editor.putLong(key, (Long) value);
 			} else if (value instanceof String) {
 				editor.putString(key, (String) value);
 			}
@@ -86,120 +74,20 @@ public class PrefsActivity extends PreferenceActivity implements
 	private void updatePrefSummary(Preference p) {
 		if (p instanceof ListPreference) {
 			ListPreference listPref = (ListPreference) p;
-			if (p.getKey().equals("homeButtonST")
-					&& listPref.getValue().toString().equals("OPENN")) {
-				p.setSummary(listPref.getEntry()
-						+ prefs.getString("homeButtonSTopenN", "1"));
-			} else if (p.getKey().equals("homeButtonDT")
-					&& listPref.getValue().toString().equals("OPENN")) {
-				p.setSummary(listPref.getEntry()
-						+ prefs.getString("homeButtonDTopenN", "1"));
-			} else if (p.getKey().equals("homeButtonLT")
-					&& listPref.getValue().toString().equals("OPENN")) {
-				p.setSummary(listPref.getEntry()
-						+ prefs.getString("homeButtonLTopenN", "1"));
-			} else if (p.getKey().equals("lruButtonST")
-					&& listPref.getValue().toString().equals("OPENN")) {
-				p.setSummary(listPref.getEntry()
-						+ prefs.getString("lruButtonSTopenN", "1"));
-			} else if (p.getKey().equals("lruButtonDT")
-					&& listPref.getValue().toString().equals("OPENN")) {
-				p.setSummary(listPref.getEntry()
-						+ prefs.getString("lruButtonDTopenN", "1"));
-			} else if (p.getKey().equals("lruButtonLT")
-					&& listPref.getValue().toString().equals("OPENN")) {
-				p.setSummary(listPref.getEntry()
-						+ prefs.getString("lruButtonLTopenN", "1"));
-			} else if (p.getKey().equals("favButtonST")
-					&& listPref.getValue().toString().equals("OPENN")) {
-				p.setSummary(listPref.getEntry()
-						+ prefs.getString("favButtonSTopenN", "1"));
-			} else if (p.getKey().equals("favButtonDT")
-					&& listPref.getValue().toString().equals("OPENN")) {
-				p.setSummary(listPref.getEntry()
-						+ prefs.getString("favButtonDTopenN", "1"));
-			} else if (p.getKey().equals("favButtonLT")
-					&& listPref.getValue().toString().equals("OPENN")) {
-				p.setSummary(listPref.getEntry()
-						+ prefs.getString("favButtonLTopenN", "1"));
-			} else if (p.getKey().equals("settingsButtonST")
-					&& listPref.getValue().toString().equals("RUN")) {
-				String[] appa = prefs.getString("settingsButtonSTapp", "%%")
-						.split("\\%");
-				p.setSummary(listPref.getEntry() + " \"" + appa[2] + "\"");
-			} else if (p.getKey().equals("settingsButtonDT")
-					&& listPref.getValue().toString().equals("RUN")) {
-				String[] appa = prefs.getString("settingsButtonDTapp", "%%")
-						.split("\\%");
-				p.setSummary(listPref.getEntry() + " \"" + appa[2] + "\"");
-			} else if (p.getKey().equals("settingsButtonLT")
-					&& listPref.getValue().toString().equals("RUN")) {
-				String[] appa = prefs.getString("settingsButtonLTapp", "%%")
-						.split("\\%");
-				p.setSummary(listPref.getEntry() + " \"" + appa[2] + "\"");
-			} else if (p.getKey().equals("advancedButtonST")
-					&& listPref.getValue().toString().equals("RUN")) {
-				String[] appa = prefs.getString("advancedButtonSTapp", "%%")
-						.split("\\%");
-				p.setSummary(listPref.getEntry() + " \"" + appa[2] + "\"");
-			} else if (p.getKey().equals("advancedButtonDT")
-					&& listPref.getValue().toString().equals("RUN")) {
-				String[] appa = prefs.getString("advancedButtonDTapp", "%%")
-						.split("\\%");
-				p.setSummary(listPref.getEntry() + " \"" + appa[2] + "\"");
-			} else if (p.getKey().equals("advancedButtonLT")
-					&& listPref.getValue().toString().equals("RUN")) {
-				String[] appa = prefs.getString("advancedButtonLTapp", "%%")
-						.split("\\%");
-				p.setSummary(listPref.getEntry() + " \"" + appa[2] + "\"");
-			} else if (p.getKey().equals("memButtonST")
-					&& listPref.getValue().toString().equals("RUN")) {
-				String[] appa = prefs.getString("memButtonSTapp", "%%").split(
-						"\\%");
-				p.setSummary(listPref.getEntry() + " \"" + appa[2] + "\"");
-			} else if (p.getKey().equals("memButtonDT")
-					&& listPref.getValue().toString().equals("RUN")) {
-				String[] appa = prefs.getString("memButtonDTapp", "%%").split(
-						"\\%");
-				p.setSummary(listPref.getEntry() + " \"" + appa[2] + "\"");
-			} else if (p.getKey().equals("memButtonLT")
-					&& listPref.getValue().toString().equals("RUN")) {
-				String[] appa = prefs.getString("memButtonLTapp", "%%").split(
-						"\\%");
-				p.setSummary(listPref.getEntry() + " \"" + appa[2] + "\"");
-			} else if (p.getKey().equals("batButtonST")
-					&& listPref.getValue().toString().equals("RUN")) {
-				String[] appa = prefs.getString("batButtonSTapp", "%%").split(
-						"\\%");
-				p.setSummary(listPref.getEntry() + " \"" + appa[2] + "\"");
-			} else if (p.getKey().equals("batButtonDT")
-					&& listPref.getValue().toString().equals("RUN")) {
-				String[] appa = prefs.getString("batButtonDTapp", "%%").split(
-						"\\%");
-				p.setSummary(listPref.getEntry() + " \"" + appa[2] + "\"");
-			} else if (p.getKey().equals("batButtonLT")
-					&& listPref.getValue().toString().equals("RUN")) {
-				String[] appa = prefs.getString("batButtonLTapp", "%%").split(
-						"\\%");
-				p.setSummary(listPref.getEntry() + " \"" + appa[2] + "\"");
-			} else if (p.getKey().equals("appFavButtonST")
-					&& listPref.getValue().toString().equals("RUN")) {
-				String[] appa = prefs.getString("appFavButtonSTapp", "%%").split(
-						"\\%");
-				p.setSummary(listPref.getEntry() + " \"" + appa[2] + "\"");
-			} else if (p.getKey().equals("appFavButtonDT")
-					&& listPref.getValue().toString().equals("RUN")) {
-				String[] appa = prefs.getString("appFavButtonDTapp", "%%").split(
-						"\\%");
-				p.setSummary(listPref.getEntry() + " \"" + appa[2] + "\"");
-			} else if (p.getKey().equals("appFavButtonLT")
-					&& listPref.getValue().toString().equals("RUN")) {
-				String[] appa = prefs.getString("appFavButtonLTapp", "%%").split(
-						"\\%");
-				p.setSummary(listPref.getEntry() + " \"" + appa[2] + "\"");
-			} else {
-				p.setSummary(listPref.getEntry());
-			}
+            if(listPref.getValue().equals("OPENN")){
+                p.setSummary(listPref.getEntry() + prefs.getString(p.getKey()+"openN", "1"));
+            }else if(listPref.getValue().equals("RUN")){
+
+                String[] appa = prefs.getString(p.getKey()+"app", "%%").split("%");
+
+                if(appa.length > 2 && appa[2] != null && appa[2].length() > 0){
+                    p.setSummary(listPref.getEntry() + " \"" + appa[2] + "\"");
+                }
+
+            }else{
+                p.setSummary(listPref.getEntry());
+            }
+
 		}
 		// For future - even more intellectual Settings
 		// if (p instanceof EditTextPreference) {
@@ -226,35 +114,34 @@ public class PrefsActivity extends PreferenceActivity implements
 
 	@Override
 	protected void onCreate(Bundle savedInstanceState) {
-
 		app = ((ReLaunchApp) getApplicationContext());
-//		app.setFullScreenIfNecessary(this);
+        if(app == null) {
+            finish();
+        }
+        app.setFullScreenIfNecessary(this);
+		List<String>  applicationsArray = app.getAppList();
+		applications = applicationsArray.toArray(new CharSequence[applicationsArray.size()]);
+		happlications = app.getAppList().toArray(new CharSequence[app.getAppList().size()]);
 
-		applicationsArray = app.getApps();
-		applications = applicationsArray
-				.toArray(new CharSequence[applicationsArray.size()]);
-		happlications = app.getApps().toArray(
-				new CharSequence[app.getApps().size()]);
-		for (int j = 0; j < happlications.length; j++) {
-			String happ = (String) happlications[j];
-			String[] happp = happ.split("\\%");
-			happlications[j] = happp[2];
-		}
-
-		prefs = PreferenceManager.getDefaultSharedPreferences(getBaseContext());
+        prefs = PreferenceManager.getDefaultSharedPreferences(getBaseContext());
 		super.onCreate(savedInstanceState);
 		addPreferencesFromResource(R.xml.prefs);
-
+		BACKUP_DIR = prefs.getString("backupDir", "/sdcard/.relaunch");
 		setContentView(R.layout.prefs_main);
-
 		PreferenceScreen prefAdvancedScreen = (PreferenceScreen) findPreference("screenAdvanced");
+        if(prefAdvancedScreen == null){
+            finish();
+        }
 		prefAdvancedScreen.setOnPreferenceClickListener(prefScreenListener);
 
 		for (int i = 0; i < prefAdvancedScreen.getPreferenceCount(); i++) {
 			Preference p = prefAdvancedScreen.getPreference(i);
-			if (p instanceof PreferenceScreen)
+			if (p instanceof PreferenceScreen){
 				p.setOnPreferenceClickListener(prefScreenListener);
+            }
 		}
+
+        //---------------------
 
 		// Save items value
 //		setDefaults();
@@ -263,7 +150,7 @@ public class PrefsActivity extends PreferenceActivity implements
 
 		findViewById(R.id.LLbuttons).setVisibility(View.GONE);
 
-		findPreference("cleanupDatabase").setOnPreferenceClickListener(
+		findPreference("cleanupDatabaseBooks").setOnPreferenceClickListener(
 				new Preference.OnPreferenceClickListener() {
 					public boolean onPreferenceClick(Preference pref) {
 						AlertDialog.Builder builder = new AlertDialog.Builder(
@@ -273,17 +160,24 @@ public class PrefsActivity extends PreferenceActivity implements
 						builder.setMessage(getResources().getString(
 								R.string.jv_prefs_cleanup_database_text));
 						builder.setPositiveButton(
-								getResources().getString(R.string.jv_prefs_yes),
+								getResources().getString(R.string.app_yes),
 								new DialogInterface.OnClickListener() {
 									public void onClick(DialogInterface dialog,
 											int whichButton) {
-										app.dataBase.resetDb();
+										String[] DBlist = databaseList();
+										File DBf;
+										for (String aDBlist : DBlist) {
+											DBf = getDatabasePath(aDBlist);
+											if (DBf.getName().equals("BOOKS.db")) {
+												DBf.delete();
+											}
+										}
 										dialog.dismiss();
 									}
 								});
 						builder.setNegativeButton(
 								getResources().getString(
-										R.string.jv_relaunch_no),
+										R.string.app_no),
 								new DialogInterface.OnClickListener() {
 									public void onClick(DialogInterface dialog,
 											int whichButton) {
@@ -294,6 +188,157 @@ public class PrefsActivity extends PreferenceActivity implements
 						return true;
 					}
 				});
+        findPreference("cleanupDatabaseOPDS").setOnPreferenceClickListener(
+                new Preference.OnPreferenceClickListener() {
+                    public boolean onPreferenceClick(Preference pref) {
+                        AlertDialog.Builder builder = new AlertDialog.Builder(
+                                PrefsActivity.this);
+                        builder.setTitle(getResources().getString(
+                                R.string.jv_prefs_cleanup_database_title));
+                        builder.setMessage(getResources().getString(
+                                R.string.jv_prefs_cleanup_databaseOPDS_text));
+                        builder.setPositiveButton(
+                                getResources().getString(R.string.app_yes),
+                                new DialogInterface.OnClickListener() {
+                                    public void onClick(DialogInterface dialog,
+                                                        int whichButton) {
+										String[] DBlist = databaseList();
+										File DBf;
+										for (String aDBlist : DBlist) {
+											DBf = getDatabasePath(aDBlist);
+											if (DBf.getName().equals("OPDS.db")) {
+												DBf.delete();
+											}
+										}
+                                        dialog.dismiss();
+                                    }
+                                });
+                        builder.setNegativeButton(
+                                getResources().getString(
+                                        R.string.app_no),
+                                new DialogInterface.OnClickListener() {
+                                    public void onClick(DialogInterface dialog,
+                                                        int whichButton) {
+                                        dialog.dismiss();
+                                    }
+                                });
+                        builder.show();
+                        return true;
+                    }
+                });
+        findPreference("cleanupDatabaseFTP").setOnPreferenceClickListener(
+                new Preference.OnPreferenceClickListener() {
+                    public boolean onPreferenceClick(Preference pref) {
+                        AlertDialog.Builder builder = new AlertDialog.Builder(
+                                PrefsActivity.this);
+                        builder.setTitle(getResources().getString(
+                                R.string.jv_prefs_cleanup_database_title));
+                        builder.setMessage(getResources().getString(
+                                R.string.jv_prefs_cleanup_databaseFTP_text));
+                        builder.setPositiveButton(
+                                getResources().getString(R.string.app_yes),
+                                new DialogInterface.OnClickListener() {
+                                    public void onClick(DialogInterface dialog,
+                                                        int whichButton) {
+										String[] DBlist = databaseList();
+										File DBf;
+										for (String aDBlist : DBlist) {
+											DBf = getDatabasePath(aDBlist);
+											if (DBf.getName().equals("FTP.db")) {
+												DBf.delete();
+											}
+										}
+                                        dialog.dismiss();
+                                    }
+                                });
+                        builder.setNegativeButton(
+                                getResources().getString(
+                                        R.string.app_no),
+                                new DialogInterface.OnClickListener() {
+                                    public void onClick(DialogInterface dialog,
+                                                        int whichButton) {
+                                        dialog.dismiss();
+                                    }
+                                });
+                        builder.show();
+                        return true;
+                    }
+                });
+		findPreference("cleanupDatabasePANELS").setOnPreferenceClickListener(
+				new Preference.OnPreferenceClickListener() {
+					public boolean onPreferenceClick(Preference pref) {
+						AlertDialog.Builder builder = new AlertDialog.Builder(
+								PrefsActivity.this);
+						builder.setTitle(getResources().getString(
+								R.string.jv_prefs_cleanup_database_title));
+						builder.setMessage(getResources().getString(
+								R.string.jv_prefs_cleanup_databasePANELS_text));
+						builder.setPositiveButton(
+								getResources().getString(R.string.app_yes),
+								new DialogInterface.OnClickListener() {
+									public void onClick(DialogInterface dialog,
+														int whichButton) {
+										String[] DBlist = databaseList();
+										File DBf;
+										for (String aDBlist : DBlist) {
+											DBf = getDatabasePath(aDBlist);
+											if (DBf.getName().equals("PANELS.db") || DBf.getName().equals("SCREEN.db") || DBf.getName().equals("LIST_PANELS.db")) {
+												DBf.delete();
+											}
+										}
+										PrefsActivity.baseChange = true;
+										dialog.dismiss();
+									}
+								});
+						builder.setNegativeButton(
+								getResources().getString(
+										R.string.app_no),
+								new DialogInterface.OnClickListener() {
+									public void onClick(DialogInterface dialog,
+														int whichButton) {
+										dialog.dismiss();
+									}
+								});
+						builder.show();
+						return true;
+					}
+				});
+        findPreference("deleteDatabaseAll").setOnPreferenceClickListener(
+                new Preference.OnPreferenceClickListener() {
+                    public boolean onPreferenceClick(Preference pref) {
+                        AlertDialog.Builder builder = new AlertDialog.Builder(
+                                PrefsActivity.this);
+                        builder.setTitle(getResources().getString(
+                                R.string.jv_prefs_cleanup_database_title));
+                        builder.setMessage(getResources().getString(
+                                R.string.jv_prefs_delete_databaseALL_text));
+                        builder.setPositiveButton(
+                                getResources().getString(R.string.app_yes),
+                                new DialogInterface.OnClickListener() {
+                                    public void onClick(DialogInterface dialog,
+                                                        int whichButton) {
+                                        String[] DBlist = databaseList();
+                                        File DBf;
+										for (String aDBlist : DBlist) {
+											DBf = getDatabasePath(aDBlist);
+											DBf.delete();
+										}
+                                        dialog.dismiss();
+                                    }
+                                });
+                        builder.setNegativeButton(
+                                getResources().getString(
+                                        R.string.app_no),
+                                new DialogInterface.OnClickListener() {
+                                    public void onClick(DialogInterface dialog,
+                                                        int whichButton) {
+                                        dialog.dismiss();
+                                    }
+                                });
+                        builder.show();
+                        return true;
+                    }
+                });
 
 		findPreference("cleanupLRU").setOnPreferenceClickListener(
 				new Preference.OnPreferenceClickListener() {
@@ -305,7 +350,7 @@ public class PrefsActivity extends PreferenceActivity implements
 						builder.setMessage(getResources().getString(
 								R.string.jv_prefs_clear_lru_text));
 						builder.setPositiveButton(
-								getResources().getString(R.string.jv_prefs_yes),
+								getResources().getString(R.string.app_yes),
 								new DialogInterface.OnClickListener() {
 									public void onClick(DialogInterface dialog,
 											int whichButton) {
@@ -315,7 +360,7 @@ public class PrefsActivity extends PreferenceActivity implements
 								});
 						builder.setNegativeButton(
 								getResources().getString(
-										R.string.jv_relaunch_no),
+										R.string.app_no),
 								new DialogInterface.OnClickListener() {
 									public void onClick(DialogInterface dialog,
 											int whichButton) {
@@ -337,7 +382,7 @@ public class PrefsActivity extends PreferenceActivity implements
 						builder.setMessage(getResources().getString(
 								R.string.jv_prefs_clear_favorites_text));
 						builder.setPositiveButton(
-								getResources().getString(R.string.jv_prefs_yes),
+								getResources().getString(R.string.app_yes),
 								new DialogInterface.OnClickListener() {
 									public void onClick(DialogInterface dialog,
 											int whichButton) {
@@ -347,7 +392,7 @@ public class PrefsActivity extends PreferenceActivity implements
 								});
 						builder.setNegativeButton(
 								getResources().getString(
-										R.string.jv_relaunch_no),
+										R.string.app_no),
 								new DialogInterface.OnClickListener() {
 									public void onClick(DialogInterface dialog,
 											int whichButton) {
@@ -362,8 +407,7 @@ public class PrefsActivity extends PreferenceActivity implements
 		findPreference("fileFilter").setOnPreferenceClickListener(
 				new Preference.OnPreferenceClickListener() {
 					public boolean onPreferenceClick(Preference pref) {
-						Intent intent = new Intent(PrefsActivity.this,
-								FiltersActivity.class);
+						Intent intent = new Intent(PrefsActivity.this, FiltersActivity.class);
 						startActivityForResult(intent, FILTS_ACT);
 						return true;
 					}
@@ -372,18 +416,24 @@ public class PrefsActivity extends PreferenceActivity implements
 		findPreference("fileAssociations").setOnPreferenceClickListener(
 				new Preference.OnPreferenceClickListener() {
 					public boolean onPreferenceClick(Preference pref) {
-						Intent intent = new Intent(PrefsActivity.this,
-								TypesActivity.class);
+						Intent intent = new Intent(PrefsActivity.this, TypesActivity.class);
 						startActivityForResult(intent, TYPES_ACT);
 						return true;
 					}
 				});
+        findPreference("screenManualPanel").setOnPreferenceClickListener(
+                new Preference.OnPreferenceClickListener() {
+                    public boolean onPreferenceClick(Preference pref) {
+                        Intent intent = new Intent(PrefsActivity.this, ScreenSettingActivity.class);
+                        startActivityForResult(intent, TYPES_ACT);
+                        return true;
+                    }
+                });
 
 		findPreference("resetSettings").setOnPreferenceClickListener(
 				new Preference.OnPreferenceClickListener() {
 					public boolean onPreferenceClick(Preference pref) {
-						AlertDialog.Builder builder = new AlertDialog.Builder(
-								context);
+						AlertDialog.Builder builder = new AlertDialog.Builder(context);
 						// "Default settings warning"
 						builder.setTitle(getResources().getString(
 								R.string.jv_prefs_default_settings_title));
@@ -392,7 +442,7 @@ public class PrefsActivity extends PreferenceActivity implements
 								R.string.jv_prefs_default_settings_text));
 						// "Yes"
 						builder.setPositiveButton(
-								getResources().getString(R.string.jv_prefs_yes),
+								getResources().getString(R.string.app_yes),
 								new DialogInterface.OnClickListener() {
 									public void onClick(DialogInterface dialog,
 											int whichButton) {
@@ -406,7 +456,7 @@ public class PrefsActivity extends PreferenceActivity implements
 								});
 						// "No"
 						builder.setNegativeButton(
-								getResources().getString(R.string.jv_prefs_no),
+								getResources().getString(R.string.app_no),
 								new DialogInterface.OnClickListener() {
 									public void onClick(DialogInterface dialog,
 											int whichButton) {
@@ -417,14 +467,11 @@ public class PrefsActivity extends PreferenceActivity implements
 						return true;
 					}
 				});
-
 		findPreference("saveSettings").setOnPreferenceClickListener(
 				new Preference.OnPreferenceClickListener() {
 					public boolean onPreferenceClick(Preference pref) {
-						boolean ret = app.copyPrefs(app.DATA_DIR,
-								app.BACKUP_DIR);
-						AlertDialog.Builder builder = new AlertDialog.Builder(
-								context);
+						boolean ret = app.copyPrefs(app.DATA_DIR, BACKUP_DIR);
+						AlertDialog.Builder builder = new AlertDialog.Builder(context);
 						if (ret) {
 							builder.setTitle(getResources().getString(
 									R.string.jv_prefs_rsr_ok_title));
@@ -437,7 +484,7 @@ public class PrefsActivity extends PreferenceActivity implements
 									R.string.jv_prefs_rsr_fail_text));
 						}
 						builder.setNeutralButton(
-								getResources().getString(R.string.jv_prefs_ok),
+								getResources().getString(R.string.app_ok),
 								new DialogInterface.OnClickListener() {
 									public void onClick(DialogInterface dialog,
 											int whichButton) {
@@ -452,8 +499,7 @@ public class PrefsActivity extends PreferenceActivity implements
 		findPreference("loadSettings").setOnPreferenceClickListener(
 				new Preference.OnPreferenceClickListener() {
 					public boolean onPreferenceClick(Preference pref) {
-						boolean ret = app.copyPrefs(app.BACKUP_DIR,
-								app.DATA_DIR);
+						boolean ret = app.copyPrefs(BACKUP_DIR,	app.DATA_DIR);
 						AlertDialog.Builder builder = new AlertDialog.Builder(
 								context);
 						if (ret) {
@@ -468,7 +514,7 @@ public class PrefsActivity extends PreferenceActivity implements
 									R.string.jv_prefs_rsr_fail_text));
 						}
 						builder.setNeutralButton(
-								getResources().getString(R.string.jv_prefs_ok),
+								getResources().getString(R.string.app_ok),
 								new DialogInterface.OnClickListener() {
 									public void onClick(DialogInterface dialog,
 											int whichButton) {
@@ -489,9 +535,7 @@ public class PrefsActivity extends PreferenceActivity implements
 				new Preference.OnPreferenceClickListener() {
 					public boolean onPreferenceClick(Preference pref) {
 						AlarmManager mgr = (AlarmManager) getSystemService(ALARM_SERVICE);
-						mgr.set(AlarmManager.RTC,
-								System.currentTimeMillis() + 500,
-								app.RestartIntent);
+						mgr.set(AlarmManager.RTC, System.currentTimeMillis() + 500, app.RestartIntent);
 						System.exit(0);
 						return true;
 					}
@@ -500,8 +544,7 @@ public class PrefsActivity extends PreferenceActivity implements
 		// final Activity pact = this;
 
 		// back button - work as cancel
-		((ImageButton) findViewById(R.id.back_btn))
-				.setOnClickListener(new View.OnClickListener() {
+		( findViewById(R.id.back_btn)).setOnClickListener(new View.OnClickListener() {
 					public void onClick(View v) {
 						if (isPreferencesChanged()) {
 							AlertDialog.Builder builder = new AlertDialog.Builder(
@@ -515,7 +558,7 @@ public class PrefsActivity extends PreferenceActivity implements
 							// "Yes"
 							builder.setPositiveButton(
 									getResources().getString(
-											R.string.jv_prefs_yes),
+											R.string.app_yes),
 									new DialogInterface.OnClickListener() {
 										public void onClick(
 												DialogInterface dialog,
@@ -530,7 +573,7 @@ public class PrefsActivity extends PreferenceActivity implements
 							// "No"
 							builder.setNegativeButton(
 									getResources().getString(
-											R.string.jv_prefs_cancel),
+											R.string.app_cancel),
 									new DialogInterface.OnClickListener() {
 										public void onClick(
 												DialogInterface dialog,
@@ -541,7 +584,7 @@ public class PrefsActivity extends PreferenceActivity implements
 							// "Cancel"
 							builder.setNeutralButton(
 									getResources().getString(
-											R.string.jv_prefs_no),
+											R.string.app_no),
 									new DialogInterface.OnClickListener() {
 										public void onClick(
 												DialogInterface dialog,
@@ -558,98 +601,19 @@ public class PrefsActivity extends PreferenceActivity implements
 					}
 				});
 
-		ImageButton upScroll = (ImageButton) findViewById(R.id.btn_scrollup);
-		upScroll.setOnClickListener(new View.OnClickListener() {
-
-			public void onClick(View v) {
-				if (DeviceInfo.EINK_NOOK) {
-					MotionEvent ev;
-					ev = MotionEvent.obtain(SystemClock.uptimeMillis(),
-							SystemClock.uptimeMillis(),
-							MotionEvent.ACTION_DOWN, 200, 100, 0);
-					getListView().dispatchTouchEvent(ev);
-					ev = MotionEvent.obtain(SystemClock.uptimeMillis(),
-							SystemClock.uptimeMillis() + 100,
-							MotionEvent.ACTION_MOVE, 200, 200, 0);
-					getListView().dispatchTouchEvent(ev);
-					SystemClock.sleep(100);
-					ev = MotionEvent.obtain(SystemClock.uptimeMillis(),
-							SystemClock.uptimeMillis(), MotionEvent.ACTION_UP,
-							200, 200, 0);
-					getListView().dispatchTouchEvent(ev);
-				} else {
-					final ListView lv = (ListView) getListView();
-					int first = lv.getFirstVisiblePosition();
-					int visible = lv.getLastVisiblePosition()
-							- lv.getFirstVisiblePosition() + 1;
-					first -= visible;
-					if (first < 0)
-						first = 0;
-					final int finfirst = first;
-					lv.clearFocus();
-					lv.post(new Runnable() {
-
-						public void run() {
-							lv.setSelection(finfirst);
-						}
-					});
-				}
-			}
-		});
-
-		ImageButton downScroll = (ImageButton) findViewById(R.id.btn_scrolldown);
-		downScroll.setOnClickListener(new View.OnClickListener() {
-
-			public void onClick(View v) {
-				if (DeviceInfo.EINK_NOOK) {
-					MotionEvent ev;
-					ev = MotionEvent.obtain(SystemClock.uptimeMillis(),
-							SystemClock.uptimeMillis(),
-							MotionEvent.ACTION_DOWN, 200, 200, 0);
-					getListView().dispatchTouchEvent(ev);
-					ev = MotionEvent.obtain(SystemClock.uptimeMillis(),
-							SystemClock.uptimeMillis() + 100,
-							MotionEvent.ACTION_MOVE, 200, 100, 0);
-					getListView().dispatchTouchEvent(ev);
-					SystemClock.sleep(100);
-					ev = MotionEvent.obtain(SystemClock.uptimeMillis(),
-							SystemClock.uptimeMillis(), MotionEvent.ACTION_UP,
-							200, 100, 0);
-					getListView().dispatchTouchEvent(ev);
-				} else {
-					final ListView lv = (ListView) getListView();
-					int total = lv.getCount();
-					int last = lv.getLastVisiblePosition();
-					if (total == last + 1)
-						return;
-					int target = last + 1;
-					if (target > (total - 1))
-						target = total - 1;
-					final int ftarget = target;
-					lv.clearFocus();
-					lv.post(new Runnable() {
-						public void run() {
-							lv.setSelection(ftarget);
-						}
-					});
-				}
-
-			}
-		});
-
 		for (int i = 0; i < getPreferenceScreen().getPreferenceCount(); i++) {
 			initSummary(getPreferenceScreen().getPreference(i));
 		}
 
 		ScreenOrientation.set(this, prefs);
+		// доступность кнопок листания настроек
 	}
 
 	@Override
 	protected void onResume() {
 		super.onResume();
-		getPreferenceScreen().getSharedPreferences()
-				.registerOnSharedPreferenceChangeListener(this);
-		app.generalOnResume(TAG, this);
+		getPreferenceScreen().getSharedPreferences().registerOnSharedPreferenceChangeListener(this);
+		app.generalOnResume(TAG);
 	}
 
 	@Override
@@ -675,12 +639,10 @@ public class PrefsActivity extends PreferenceActivity implements
 			editor.commit();
 			break;
 		default:
-			return;
-		}
+        }
 	}
 
-	public void onSharedPreferenceChanged(SharedPreferences sharedPreferences,
-			String key) {
+	public void onSharedPreferenceChanged(SharedPreferences sharedPreferences,final String key) {
 
 		final Preference pref = findPreference(key);
 		// update summary
@@ -694,41 +656,28 @@ public class PrefsActivity extends PreferenceActivity implements
 				String value = sharedPreferences.getString(key, "UNKNOWN");
 				if (value.equals("LAUNCHER")) {
 					do_pref_subrequest = false;
-					((CheckBoxPreference) findPreference("fullScreen"))
-							.setChecked(true);
-					((CheckBoxPreference) findPreference("homeMode"))
-							.setChecked(true);
-					((CheckBoxPreference) findPreference("libraryMode"))
-							.setChecked(true);
-					((CheckBoxPreference) findPreference("shopMode"))
-							.setChecked(true);
+					((CheckBoxPreference) findPreference("fullScreen")).setChecked(true);
+					((CheckBoxPreference) findPreference("homeMode")).setChecked(true);
+					((CheckBoxPreference) findPreference("libraryMode")).setChecked(true);
+					((CheckBoxPreference) findPreference("shopMode")).setChecked(true);
 					do_pref_subrequest = false;
 				} else if (value.equals("PROGRAM")) {
 					do_pref_subrequest = false;
-					((CheckBoxPreference) findPreference("fullScreen"))
-							.setChecked(false);
-					((CheckBoxPreference) findPreference("homeMode"))
-							.setChecked(false);
-					((CheckBoxPreference) findPreference("libraryMode"))
-							.setChecked(false);
-					((CheckBoxPreference) findPreference("shopMode"))
-							.setChecked(false);
+					((CheckBoxPreference) findPreference("fullScreen")).setChecked(false);
+					((CheckBoxPreference) findPreference("homeMode")).setChecked(false);
+					((CheckBoxPreference) findPreference("libraryMode")).setChecked(false);
+					((CheckBoxPreference) findPreference("shopMode")).setChecked(false);
 					do_pref_subrequest = true;
 				}
 			} else if (key.equals("workMode")) {
 				String value = sharedPreferences.getString(key, "UNKNOWN");
 				if (value.equals("FILES")) {
 					do_pref_subrequest = false;
-					((CheckBoxPreference) findPreference("showBookTitles"))
-							.setChecked(false);
-					((CheckBoxPreference) findPreference("rowSeparator"))
-							.setChecked(false);
-					((CheckBoxPreference) findPreference("useFileManagerFunctions"))
-							.setChecked(true);
-					((CheckBoxPreference) findPreference("openWith"))
-					.setChecked(true);
-					((CheckBoxPreference) findPreference("showFullDirPath"))
-					.setChecked(true);
+					((CheckBoxPreference) findPreference("showBookTitles")).setChecked(false);
+					((CheckBoxPreference) findPreference("rowSeparator")).setChecked(false);
+					((CheckBoxPreference) findPreference("useFileManagerFunctions")).setChecked(true);
+					((CheckBoxPreference) findPreference("openWith")).setChecked(true);
+					((CheckBoxPreference) findPreference("showFullDirPath")).setChecked(true);
 					SharedPreferences.Editor editor = prefs.edit();
 					editor.putInt("sortMode", 0);
 					editor.putBoolean("showBookTitles", false);
@@ -740,16 +689,11 @@ public class PrefsActivity extends PreferenceActivity implements
 					do_pref_subrequest = true;
 				} else if (value.equals("BOOKS")) {
 					do_pref_subrequest = false;
-					((CheckBoxPreference) findPreference("showBookTitles"))
-							.setChecked(true);
-					((CheckBoxPreference) findPreference("rowSeparator"))
-							.setChecked(true);
-					((CheckBoxPreference) findPreference("useFileManagerFunctions"))
-							.setChecked(false);
-					((CheckBoxPreference) findPreference("openWith"))
-							.setChecked(false);
-					((CheckBoxPreference) findPreference("showFullDirPath"))
-					.setChecked(false);
+					((CheckBoxPreference) findPreference("showBookTitles")).setChecked(true);
+					((CheckBoxPreference) findPreference("rowSeparator")).setChecked(true);
+					((CheckBoxPreference) findPreference("useFileManagerFunctions")).setChecked(false);
+					((CheckBoxPreference) findPreference("openWith")).setChecked(false);
+					((CheckBoxPreference) findPreference("showFullDirPath")).setChecked(false);
 					SharedPreferences.Editor editor = prefs.edit();
 					editor.putInt("sortMode", 2);
 					editor.putBoolean("showBookTitles", true);
@@ -763,716 +707,176 @@ public class PrefsActivity extends PreferenceActivity implements
 			} else if (key.equals("screenUpdateMode")) {
 				boolean value = sharedPreferences.getBoolean(key, true);
 				if (value) {
-					((ListPreference) findPreference("einkUpdateMode"))
-							.setValueIndex(2);
+					((ListPreference) findPreference("einkUpdateMode")).setValueIndex(2);
 				} else {
-					((ListPreference) findPreference("einkUpdateMode"))
-							.setValueIndex(1);
+					((ListPreference) findPreference("einkUpdateMode")).setValueIndex(1);
 				}
 			} else if (key.equals("fileFontSize")) {
 				do_pref_subrequest = false;
 				String sValue = sharedPreferences.getString("fileFontSize", "20");
-				int f1Size = (new Integer(sValue)).intValue();
+				int f1Size = Integer.valueOf(sValue);
 				int f2Size = f1Size*4/5;
-				((EditTextPreference) findPreference("firstLineFontSizePx"))
-					.setText(((Integer) f1Size).toString());
-				((EditTextPreference) findPreference("secondLineFontSizePx"))
-					.setText(((Integer) f2Size).toString());
+				((EditTextPreference) findPreference("firstLineFontSizePx")).setText(((Integer) f1Size).toString());
+				((EditTextPreference) findPreference("secondLineFontSizePx")).setText(((Integer) f2Size).toString());
 				do_pref_subrequest = true;
 			}
 
-			if ((key.equals("fullScreen")) || (key.equals("homeMode"))
-					|| (key.equals("libraryMode")) || (key.equals("shopMode"))) {
+			if ((key.equals("fullScreen")) || (key.equals("homeMode")) || (key.equals("libraryMode")) || (key.equals("shopMode"))) {
 				do_pref_subrequest = false;
 				((ListPreference) findPreference("startMode")).setValueIndex(2);
 				do_pref_subrequest = true;
 			}
-			if ((key.equals("showBookTitles"))
-					|| (key.equals("useFileManagerFunctions"))) {
+			if ((key.equals("showBookTitles")) || (key.equals("useFileManagerFunctions"))) {
 				do_pref_subrequest = false;
 				((ListPreference) findPreference("workMode")).setValueIndex(2);
 				do_pref_subrequest = true;
 			}
 
 			// special cases
-			// HOME
-			if (key.equals("homeButtonST")) {
-				if (sharedPreferences.getString(key, "OPENN").equals("OPENN")) {
-					AlertDialog.Builder builder1 = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select number"
-					builder1.setTitle(getResources().getString(
-							R.string.jv_prefs_select_number));
-					final EditText input = new EditText(PrefsActivity.this);
-					input.setInputType(InputType.TYPE_CLASS_NUMBER);
-					input.setText(sharedPreferences.getString(
-							"homeButtonSTopenN", "1"));
-					builder1.setView(input);
-					// "OK"
-					builder1.setPositiveButton(
-							getResources().getString(R.string.jv_prefs_ok),
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int whichButton) {
-									InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
-									imm.hideSoftInputFromWindow(
-											input.getWindowToken(), 0);
-									dialog.dismiss();
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("homeButtonSTopenN", input
-											.getText().toString());
-									editor.commit();
-									updatePrefSummary(pref);
-								}
-							});
-					InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
-					imm.toggleSoftInput(InputMethodManager.SHOW_FORCED, 0);
-					builder1.show();
-				}
-			}
-			if (key.equals("homeButtonDT")) {
-				if (sharedPreferences.getString(key, "OPENMENU")
-						.equals("OPENN")) {
-					AlertDialog.Builder builder1 = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select number"
-					builder1.setTitle(getResources().getString(
-							R.string.jv_prefs_select_number));
-					final EditText input = new EditText(PrefsActivity.this);
-					input.setInputType(InputType.TYPE_CLASS_NUMBER);
-					input.setText(sharedPreferences.getString(
-							"homeButtonDTopenN", "1"));
-					builder1.setView(input);
-					// "Ok"
-					builder1.setPositiveButton("OK",
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int whichButton) {
-									InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
-									imm.hideSoftInputFromWindow(
-											input.getWindowToken(), 0);
-									dialog.dismiss();
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("homeButtonDTopenN", input
-											.getText().toString());
-									editor.commit();
-									updatePrefSummary(pref);
-								}
-							});
-					InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
-					imm.toggleSoftInput(InputMethodManager.SHOW_FORCED, 0);
-					builder1.show();
-				}
-			}
-			if (key.equals("homeButtonLT")) {
-				if (sharedPreferences.getString(key, "OPENSCREEN").equals(
-						"OPENN")) {
-					AlertDialog.Builder builder1 = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select number"
-					builder1.setTitle(getResources().getString(
-							R.string.jv_prefs_select_number));
-					final EditText input = new EditText(PrefsActivity.this);
-					input.setInputType(InputType.TYPE_CLASS_NUMBER);
-					input.setText(sharedPreferences.getString(
-							"homeButtonLTopenN", "1"));
-					builder1.setView(input);
-					// "Ok"
-					builder1.setPositiveButton("OK",
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int whichButton) {
-									InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
-									imm.hideSoftInputFromWindow(
-											input.getWindowToken(), 0);
-									dialog.dismiss();
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("homeButtonLTopenN", input
-											.getText().toString());
-									editor.commit();
-									updatePrefSummary(pref);
-								}
-							});
-					InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
-					imm.toggleSoftInput(InputMethodManager.SHOW_FORCED, 0);
-					builder1.show();
-				}
-			}
-			// LRU
-			if (key.equals("lruButtonST")) {
-				if (sharedPreferences.getString(key, "OPENSCREEN").equals(
-						"OPENN")) {
-					AlertDialog.Builder builder1 = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select number"
-					builder1.setTitle(getResources().getString(
-							R.string.jv_prefs_select_number));
-					final EditText input = new EditText(PrefsActivity.this);
-					input.setInputType(InputType.TYPE_CLASS_NUMBER);
-					input.setText(sharedPreferences.getString(
-							"lruButtonSTopenN", "1"));
-					builder1.setView(input);
-					// "OK"
-					builder1.setPositiveButton(
-							getResources().getString(R.string.jv_prefs_ok),
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int whichButton) {
-									InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
-									imm.hideSoftInputFromWindow(
-											input.getWindowToken(), 0);
-									dialog.dismiss();
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("lruButtonSTopenN", input
-											.getText().toString());
-									editor.commit();
-									updatePrefSummary(pref);
-								}
-							});
-					InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
-					imm.toggleSoftInput(InputMethodManager.SHOW_FORCED, 0);
-					builder1.show();
-				}
-			}
-			if (key.equals("lruButtonDT")) {
-				if (sharedPreferences.getString(key, "NOTHING").equals("OPENN")) {
-					AlertDialog.Builder builder1 = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select number"
-					builder1.setTitle(getResources().getString(
-							R.string.jv_prefs_select_number));
-					final EditText input = new EditText(PrefsActivity.this);
-					input.setInputType(InputType.TYPE_CLASS_NUMBER);
-					input.setText(sharedPreferences.getString(
-							"lruButtonDTopenN", "1"));
-					builder1.setView(input);
-					// "Ok"
-					builder1.setPositiveButton("OK",
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int whichButton) {
-									InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
-									imm.hideSoftInputFromWindow(
-											input.getWindowToken(), 0);
-									dialog.dismiss();
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("lruButtonDTopenN", input
-											.getText().toString());
-									editor.commit();
-									updatePrefSummary(pref);
-								}
-							});
-					InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
-					imm.toggleSoftInput(InputMethodManager.SHOW_FORCED, 0);
-					builder1.show();
-				}
-			}
-			if (key.equals("lruButtonLT")) {
-				if (sharedPreferences.getString(key, "NOTHING").equals("OPENN")) {
-					AlertDialog.Builder builder1 = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select number"
-					builder1.setTitle(getResources().getString(
-							R.string.jv_prefs_select_number));
-					final EditText input = new EditText(PrefsActivity.this);
-					input.setInputType(InputType.TYPE_CLASS_NUMBER);
-					input.setText(sharedPreferences.getString(
-							"lruButtonLTopenN", "1"));
-					builder1.setView(input);
-					// "Ok"
-					builder1.setPositiveButton("OK",
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int whichButton) {
-									InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
-									imm.hideSoftInputFromWindow(
-											input.getWindowToken(), 0);
-									dialog.dismiss();
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("lruButtonLTopenN", input
-											.getText().toString());
-									editor.commit();
-									updatePrefSummary(pref);
-								}
-							});
-					InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
-					imm.toggleSoftInput(InputMethodManager.SHOW_FORCED, 0);
-					builder1.show();
-				}
-			}
-			// FAV
-			if (key.equals("favButtonST")) {
-				if (sharedPreferences.getString(key, "OPENSCREEN").equals(
-						"OPENN")) {
-					AlertDialog.Builder builder1 = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select number"
-					builder1.setTitle(getResources().getString(
-							R.string.jv_prefs_select_number));
-					final EditText input = new EditText(PrefsActivity.this);
-					input.setInputType(InputType.TYPE_CLASS_NUMBER);
-					input.setText(sharedPreferences.getString(
-							"favButtonSTopenN", "1"));
-					builder1.setView(input);
-					// "OK"
-					builder1.setPositiveButton(
-							getResources().getString(R.string.jv_prefs_ok),
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int whichButton) {
-									InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
-									imm.hideSoftInputFromWindow(
-											input.getWindowToken(), 0);
-									dialog.dismiss();
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("favButtonSTopenN", input
-											.getText().toString());
-									editor.commit();
-									updatePrefSummary(pref);
-								}
-							});
-					InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
-					imm.toggleSoftInput(InputMethodManager.SHOW_FORCED, 0);
-					builder1.show();
-				}
-			}
-			if (key.equals("favButtonDT")) {
-				if (sharedPreferences.getString(key, "NOTHING").equals("OPENN")) {
-					AlertDialog.Builder builder1 = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select number"
-					builder1.setTitle(getResources().getString(
-							R.string.jv_prefs_select_number));
-					final EditText input = new EditText(PrefsActivity.this);
-					input.setInputType(InputType.TYPE_CLASS_NUMBER);
-					input.setText(sharedPreferences.getString(
-							"favButtonDTopenN", "1"));
-					builder1.setView(input);
-					// "Ok"
-					builder1.setPositiveButton("OK",
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int whichButton) {
-									InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
-									imm.hideSoftInputFromWindow(
-											input.getWindowToken(), 0);
-									dialog.dismiss();
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("favButtonDTopenN", input
-											.getText().toString());
-									editor.commit();
-									updatePrefSummary(pref);
-								}
-							});
-					InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
-					imm.toggleSoftInput(InputMethodManager.SHOW_FORCED, 0);
-					builder1.show();
-				}
-			}
-			if (key.equals("favButtonLT")) {
-				if (sharedPreferences.getString(key, "NOTHING").equals("OPENN")) {
-					AlertDialog.Builder builder1 = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select number"
-					builder1.setTitle(getResources().getString(
-							R.string.jv_prefs_select_number));
-					final EditText input = new EditText(PrefsActivity.this);
-					input.setInputType(InputType.TYPE_CLASS_NUMBER);
-					input.setText(sharedPreferences.getString(
-							"favButtonLTopenN", "1"));
-					builder1.setView(input);
-					// "Ok"
-					builder1.setPositiveButton("OK",
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int whichButton) {
-									InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
-									imm.hideSoftInputFromWindow(
-											input.getWindowToken(), 0);
-									dialog.dismiss();
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("favButtonLTopenN", input
-											.getText().toString());
-									editor.commit();
-									updatePrefSummary(pref);
-								}
-							});
-					InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
-					imm.toggleSoftInput(InputMethodManager.SHOW_FORCED, 0);
-					builder1.show();
-				}
-			}
-			if (key.equals("settingsButtonST")) {
-				if (sharedPreferences.getString(key, "RELAUNCH").equals("RUN")) {
-					AlertDialog.Builder builder = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select application"
-					builder.setTitle(getResources().getString(
-							R.string.jv_prefs_select_application));
-					builder.setSingleChoiceItems(happlications, -1,
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int i) {
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("settingsButtonSTapp",
-											(String) applications[i]);
-									editor.commit();
-									updatePrefSummary(pref);
-									dialog.dismiss();
-								}
-							});
-					builder.show();
-				}
-			}
-			if (key.equals("settingsButtonDT")) {
-				if (sharedPreferences.getString(key, "NOTHING").equals("RUN")) {
-					AlertDialog.Builder builder = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select application"
-					builder.setTitle(getResources().getString(
-							R.string.jv_prefs_select_application));
-					builder.setSingleChoiceItems(happlications, -1,
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int i) {
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("settingsButtonDTapp",
-											(String) applications[i]);
-									editor.commit();
-									updatePrefSummary(pref);
-									dialog.dismiss();
-								}
-							});
-					builder.show();
-				}
-			}
-			if (key.equals("settingsButtonLT")) {
-				if (sharedPreferences.getString(key, "NOTHING").equals("RUN")) {
-					AlertDialog.Builder builder = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select application"
-					builder.setTitle(getResources().getString(
-							R.string.jv_prefs_select_application));
-					builder.setSingleChoiceItems(happlications, -1,
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int i) {
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("settingsButtonLTapp",
-											(String) applications[i]);
-									editor.commit();
-									updatePrefSummary(pref);
-									dialog.dismiss();
-								}
-							});
-					builder.show();
-				}
-			}
-			if (key.equals("advancedButtonST")) {
-				if (sharedPreferences.getString(key, "RELAUNCH").equals("RUN")) {
-					AlertDialog.Builder builder = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select application"
-					builder.setTitle(getResources().getString(
-							R.string.jv_prefs_select_application));
-					builder.setSingleChoiceItems(happlications, -1,
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int i) {
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("advancedButtonSTapp",
-											(String) applications[i]);
-									editor.commit();
-									updatePrefSummary(pref);
-									dialog.dismiss();
-								}
-							});
-					builder.show();
-				}
-			}
-			if (key.equals("advancedButtonDT")) {
-				if (sharedPreferences.getString(key, "NOTHING").equals("RUN")) {
-					AlertDialog.Builder builder = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select application"
-					builder.setTitle(getResources().getString(
-							R.string.jv_prefs_select_application));
-					builder.setSingleChoiceItems(happlications, -1,
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int i) {
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("advancedButtonDTapp",
-											(String) applications[i]);
-									editor.commit();
-									updatePrefSummary(pref);
-									dialog.dismiss();
-								}
-							});
-					builder.show();
-				}
-			}
-			if (key.equals("advancedButtonLT")) {
-				if (sharedPreferences.getString(key, "NOTHING").equals("RUN")) {
-					AlertDialog.Builder builder = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select application"
-					builder.setTitle(getResources().getString(
-							R.string.jv_prefs_select_application));
-					builder.setSingleChoiceItems(happlications, -1,
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int i) {
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("advancedButtonLTapp",
-											(String) applications[i]);
-									editor.commit();
-									updatePrefSummary(pref);
-									dialog.dismiss();
-								}
-							});
-					builder.show();
-				}
-			}
-			if (key.equals("memButtonST")) {
-				if (sharedPreferences.getString(key, "RELAUNCH").equals("RUN")) {
-					AlertDialog.Builder builder = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select application"
-					builder.setTitle(getResources().getString(
-							R.string.jv_prefs_select_application));
-					builder.setSingleChoiceItems(happlications, -1,
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int i) {
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("memButtonSTapp",
-											(String) applications[i]);
-									editor.commit();
-									updatePrefSummary(pref);
-									dialog.dismiss();
-								}
-							});
-					builder.show();
-				}
-			}
-			if (key.equals("memButtonDT")) {
-				if (sharedPreferences.getString(key, "NOTHING").equals("RUN")) {
-					AlertDialog.Builder builder = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select application"
-					builder.setTitle(getResources().getString(
-							R.string.jv_prefs_select_application));
-					builder.setSingleChoiceItems(happlications, -1,
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int i) {
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("memButtonDTapp",
-											(String) applications[i]);
-									editor.commit();
-									updatePrefSummary(pref);
-									dialog.dismiss();
-								}
-							});
-					builder.show();
-				}
-			}
-			if (key.equals("memButtonLT")) {
-				if (sharedPreferences.getString(key, "NOTHING").equals("RUN")) {
-					AlertDialog.Builder builder = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select application"
-					builder.setTitle(getResources().getString(
-							R.string.jv_prefs_select_application));
-					builder.setSingleChoiceItems(happlications, -1,
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int i) {
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("memButtonLTapp",
-											(String) applications[i]);
-									editor.commit();
-									updatePrefSummary(pref);
-									dialog.dismiss();
-								}
-							});
-					builder.show();
-				}
-			}
-			if (key.equals("batButtonST")) {
-				if (sharedPreferences.getString(key, "RELAUNCH").equals("RUN")) {
-					AlertDialog.Builder builder = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select application"
-					builder.setTitle(getResources().getString(
-							R.string.jv_prefs_select_application));
-					builder.setSingleChoiceItems(happlications, -1,
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int i) {
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("batButtonSTapp",
-											(String) applications[i]);
-									editor.commit();
-									updatePrefSummary(pref);
-									dialog.dismiss();
-								}
-							});
-					builder.show();
-				}
-			}
-			if (key.equals("batButtonDT")) {
-				if (sharedPreferences.getString(key, "NOTHING").equals("RUN")) {
-					AlertDialog.Builder builder = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select application"
-					builder.setTitle(getResources().getString(
-							R.string.jv_prefs_select_application));
-					builder.setSingleChoiceItems(happlications, -1,
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int i) {
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("batButtonDTapp",
-											(String) applications[i]);
-									editor.commit();
-									updatePrefSummary(pref);
-									dialog.dismiss();
-								}
-							});
-					builder.show();
-				}
-			}
-			if (key.equals("batButtonLT")) {
-				if (sharedPreferences.getString(key, "NOTHING").equals("RUN")) {
-					AlertDialog.Builder builder = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select application"
-					builder.setTitle(getResources().getString(
-							R.string.jv_prefs_select_application));
-					builder.setSingleChoiceItems(happlications, -1,
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int i) {
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("batButtonLTapp",
-											(String) applications[i]);
-									editor.commit();
-									updatePrefSummary(pref);
-									dialog.dismiss();
-								}
-							});
-					builder.show();
-				}
-			}
-			if (key.equals("appFavButtonST")) {
-				if (sharedPreferences.getString(key, "RELAUNCH").equals("RUN")) {
-					AlertDialog.Builder builder = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select application"
-					builder.setTitle(getResources().getString(
-							R.string.jv_prefs_select_application));
-					builder.setSingleChoiceItems(happlications, -1,
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int i) {
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("appFavButtonSTapp",
-											(String) applications[i]);
-									editor.commit();
-									updatePrefSummary(pref);
-									dialog.dismiss();
-								}
-							});
-					builder.show();
-				}
-			}
-			if (key.equals("appFavButtonDT")) {
-				if (sharedPreferences.getString(key, "RELAUNCH").equals("RUN")) {
-					AlertDialog.Builder builder = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select application"
-					builder.setTitle(getResources().getString(
-							R.string.jv_prefs_select_application));
-					builder.setSingleChoiceItems(happlications, -1,
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int i) {
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("appFavButtonDTapp",
-											(String) applications[i]);
-									editor.commit();
-									updatePrefSummary(pref);
-									dialog.dismiss();
-								}
-							});
-					builder.show();
-				}
-			}
-			if (key.equals("appFavButtonLT")) {
-				if (sharedPreferences.getString(key, "RELAUNCH").equals("RUN")) {
-					AlertDialog.Builder builder = new AlertDialog.Builder(
-							PrefsActivity.this);
-					// "Select application"
-					builder.setTitle(getResources().getString(
-							R.string.jv_prefs_select_application));
-					builder.setSingleChoiceItems(happlications, -1,
-							new DialogInterface.OnClickListener() {
-								public void onClick(DialogInterface dialog,
-										int i) {
-									SharedPreferences.Editor editor = prefs
-											.edit();
-									editor.putString("appFavButtonLTapp",
-											(String) applications[i]);
-									editor.commit();
-									updatePrefSummary(pref);
-									dialog.dismiss();
-								}
-							});
-					builder.show();
-				}
-			}
-			
+            //=======================================================================================================
+            if (key.equals("dropboxSetButton")) {
+                checkSetDropboxAndOpds("dropboxSetButton", sharedPreferences.getString(key, "none"), sharedPreferences);
+            }else if (key.equals("opdsSetButton")) {
+                checkSetDropboxAndOpds("opdsSetButton", sharedPreferences.getString(key, "none"), sharedPreferences);
+            }else if (key.equals("ftpSetButton")) {
+                checkSetDropboxAndOpds("ftpSetButton", sharedPreferences.getString(key, "none"), sharedPreferences);
+            }else if(key.equals("homeButtonST") || key.equals("homeButtonDT") || key.equals("homeButtonLT") ||
+                    key.equals("lruButtonST") || key.equals("lruButtonDT") || key.equals("lruButtonLT") ||
+                    key.equals("favButtonST") || key.equals("favButtonDT") || key.equals("favButtonLT") ||
+                    key.equals("settingsButtonST") || key.equals("settingsButtonDT") || key.equals("settingsButtonLT") ||
+                    key.equals("advancedButtonST") || key.equals("advancedButtonDT") || key.equals("advancedButtonLT") ||
+                    key.equals("memButtonST") || key.equals("memButtonDT") || key.equals("memButtonLT") ||
+                    key.equals("batButtonST") || key.equals("batButtonDT") || key.equals("batButtonLT") ||
+                    key.equals("appFavButtonST") || key.equals("appFavButtonDT") || key.equals("appFavButtonLT") ||
+                    key.equals("appAllButtonST") || key.equals("appAllButtonDT") || key.equals("appAllButtonLT") ||
+                    key.equals("appLastButtonST") || key.equals("appLastButtonDT") || key.equals("appLastButtonLT") ||
+                    key.equals("searchButtonST") || key.equals("searchButtonDT") || key.equals("searchButtonLT"))
+                    {
+                        if (sharedPreferences.getString(key, "NOTHING").equals("RUN")) {
+                            AlertDialog.Builder builder = new AlertDialog.Builder(PrefsActivity.this);
+                            // "Select application"
+                            builder.setTitle(getResources().getString(R.string.jv_prefs_select_application));
+                            builder.setSingleChoiceItems(happlications, -1, new DialogInterface.OnClickListener() {
+                                        public void onClick(DialogInterface dialog,int i) {
+                                            SharedPreferences.Editor editor = prefs.edit();
+                                            editor.putString(key + "app", (String) applications[i]);
+                                            editor.commit();
+                                            updatePrefSummary(pref);
+                                            dialog.dismiss();
+                                        }
+                                    });
+                            builder.show();
+                        }else if (sharedPreferences.getString(key, "NOTHING").equals("FAVN")) {
+                            AlertDialog.Builder builder1 = new AlertDialog.Builder(PrefsActivity.this);
+                            // "Select number"
+                            builder1.setTitle(getResources().getString( R.string.jv_prefs_select_number));
+                            final EditText input = new EditText(PrefsActivity.this);
+                            input.setInputType(InputType.TYPE_CLASS_NUMBER);
+                            input.setText(sharedPreferences.getString(key + "fav", "1"));
+                            builder1.setView(input);
+                            // "Ok"
+                            builder1.setPositiveButton("OK",
+                                    new DialogInterface.OnClickListener() {
+                                        public void onClick(DialogInterface dialog,
+                                                            int whichButton) {
+                                            InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
+                                            imm.hideSoftInputFromWindow(input.getWindowToken(), 0);
+                                            dialog.dismiss();
+                                            SharedPreferences.Editor editor = prefs.edit();
+                                            editor.putString(key + "fav", String.valueOf(input.getText()));
+                                            editor.commit();
+                                            updatePrefSummary(pref);
+                                        }
+                                    });
+                            InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
+                            imm.toggleSoftInput(InputMethodManager.SHOW_FORCED, 0);
+                            builder1.show();
+                        }else if (sharedPreferences.getString(key, "NOTHING").equals("LRUN")) {
+                            AlertDialog.Builder builder1 = new AlertDialog.Builder(PrefsActivity.this);
+                            // "Select number"
+                            builder1.setTitle(getResources().getString(R.string.jv_prefs_select_number));
+                            final EditText input = new EditText(PrefsActivity.this);
+                            input.setInputType(InputType.TYPE_CLASS_NUMBER);
+                            input.setText(sharedPreferences.getString(key + "lru", "1"));
+                            builder1.setView(input);
+                            // "Ok"
+                            builder1.setPositiveButton("OK",
+                                    new DialogInterface.OnClickListener() {
+                                        public void onClick(DialogInterface dialog,
+                                                            int whichButton) {
+                                            InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
+                                            imm.hideSoftInputFromWindow( input.getWindowToken(), 0);
+                                            dialog.dismiss();
+                                            SharedPreferences.Editor editor = prefs.edit();
+                                            editor.putString(key + "lru", String.valueOf(input.getText()));
+                                            editor.commit();
+                                            updatePrefSummary(pref);
+                                        }
+                                    });
+                            InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
+                            imm.toggleSoftInput(InputMethodManager.SHOW_FORCED, 0);
+                            builder1.show();
+                        }else if (sharedPreferences.getString(key, "OPENMENU").equals("HOMEN")) {
+                            AlertDialog.Builder builder1 = new AlertDialog.Builder(
+                                    PrefsActivity.this);
+                            // "Select number"
+                            builder1.setTitle(getResources().getString(R.string.jv_prefs_select_number));
+                            final EditText input = new EditText(PrefsActivity.this);
+                            input.setInputType(InputType.TYPE_CLASS_NUMBER);
+                            input.setText(sharedPreferences.getString(key +  "home", "1"));
+                            builder1.setView(input);
+                            // "Ok"
+                            builder1.setPositiveButton("OK",
+                                    new DialogInterface.OnClickListener() {
+                                        public void onClick(DialogInterface dialog,
+                                                            int whichButton) {
+                                            InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
+                                            imm.hideSoftInputFromWindow(input.getWindowToken(), 0);
+                                            dialog.dismiss();
+                                            SharedPreferences.Editor editor = prefs.edit();
+                                            editor.putString(key +  "home", String.valueOf(input.getText()));
+                                            editor.commit();
+                                            updatePrefSummary(pref);
+                                        }
+                                    });
+                            InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
+                            imm.toggleSoftInput(InputMethodManager.SHOW_FORCED, 0);
+                            builder1.show();
+                        }
+                   checkSetDropboxAndOpds(key, sharedPreferences.getString(key, "none"), sharedPreferences);
+            }
+
 		}
 	}
 
 	public Preference.OnPreferenceClickListener prefScreenListener = new Preference.OnPreferenceClickListener() {
 		public boolean onPreferenceClick(Preference pref) {
-			final PreferenceScreen prefScreen = (PreferenceScreen) pref;
-			LayoutInflater inflater = (LayoutInflater) getApplicationContext()
-					.getSystemService(Context.LAYOUT_INFLATER_SERVICE);
-			final View prefView = inflater.inflate(R.layout.prefs_main, null);
-			prefScreen.getDialog().setContentView(prefView);
-			final ListView prefListView = (ListView) prefView
-					.findViewById(android.R.id.list);
-			prefScreen.bind(prefListView);
+            final PreferenceScreen prefScreen = (PreferenceScreen) pref;
 
-			EditText tEdit = (EditText) prefView
-					.findViewById(R.id.prefernces_title);
+            prefScreen.getDialog().getWindow().setFlags(WindowManager.LayoutParams.FLAG_FULLSCREEN, WindowManager.LayoutParams.FLAG_FULLSCREEN);
+
+			LayoutInflater inflater = (LayoutInflater) getApplicationContext().getSystemService(Context.LAYOUT_INFLATER_SERVICE);
+			final View prefView = inflater.inflate(R.layout.prefs_main, null);
+
+			prefScreen.getDialog().setContentView(prefView);
+
+			final ListView prefListView = (ListView) prefView.findViewById(android.R.id.list);
+			prefScreen.bind(prefListView);
+			// доступность кнопок листания настроек------------
+			int total = prefListView.getCount();
+			int last = prefListView.getLastVisiblePosition();
+
+			final ImageButton upBtn = (ImageButton) prefView.findViewById(R.id.btn_scrollup);
+			final ImageButton downBtn = (ImageButton) prefView.findViewById(R.id.btn_scrolldown);
+
+			upBtn.setEnabled(false);
+			upBtn.setImageDrawable(getResources().getDrawable(R.drawable.ci_arrowup_gray));
+			if (last == total -1){
+				downBtn.setEnabled(false);
+				downBtn.setImageDrawable(getResources().getDrawable(R.drawable.ci_arrowdown_gray));
+			}
+			//-------------------------------------------------
+			EditText tEdit = (EditText) prefView.findViewById(R.id.prefernces_title);
 			tEdit.setText(pref.getTitle());
 
 			ImageButton b = (ImageButton) prefView.findViewById(R.id.back_btn);
@@ -1482,12 +886,27 @@ public class PrefsActivity extends PreferenceActivity implements
 				}
 			});
 
-			ImageButton bu = (ImageButton) prefView
-					.findViewById(R.id.btn_scrollup);
+			ImageButton bu = (ImageButton) prefView.findViewById(R.id.btn_scrollup);
 			bu.setOnClickListener(new View.OnClickListener() {
 
 				public void onClick(View v) {
-					if (DeviceInfo.EINK_NOOK) {
+					int first = prefListView.getFirstVisiblePosition();
+					int total = prefListView.getCount();
+					int last = prefListView.getLastVisiblePosition();
+					int visible = last - first + 1;
+					first -= visible;
+					if (first < 0) {
+						first = 0;
+					}
+					if (total != first + visible + 1) {
+						downBtn.setEnabled(true);
+						downBtn.setImageDrawable(getResources().getDrawable(R.drawable.ci_arrowdown));
+					}
+					if (first == 0){
+						upBtn.setEnabled(false);
+						upBtn.setImageDrawable(getResources().getDrawable(R.drawable.ci_arrowup_gray));
+					}
+					if (N2DeviceInfo.EINK_NOOK) {
 						MotionEvent ev;
 						ev = MotionEvent.obtain(SystemClock.uptimeMillis(),
 								SystemClock.uptimeMillis(),
@@ -1503,12 +922,6 @@ public class PrefsActivity extends PreferenceActivity implements
 								MotionEvent.ACTION_UP, 200, 200, 0);
 						prefListView.dispatchTouchEvent(ev);
 					} else {
-						int first = prefListView.getFirstVisiblePosition();
-						int visible = prefListView.getLastVisiblePosition()
-								- prefListView.getFirstVisiblePosition() + 1;
-						first -= visible;
-						if (first < 0)
-							first = 0;
 						final int finfirst = first;
 						prefListView.clearFocus();
 						prefListView.post(new Runnable() {
@@ -1518,15 +931,32 @@ public class PrefsActivity extends PreferenceActivity implements
 							}
 						});
 					}
+
+
+
 				}
 			});
 
-			ImageButton bd = (ImageButton) prefView
-					.findViewById(R.id.btn_scrolldown);
+			ImageButton bd = (ImageButton) prefView.findViewById(R.id.btn_scrolldown);
 			bd.setOnClickListener(new View.OnClickListener() {
 
 				public void onClick(View v) {
-					if (DeviceInfo.EINK_NOOK) {
+					int first = prefListView.getFirstVisiblePosition();
+					int total = prefListView.getCount();
+					int last = prefListView.getLastVisiblePosition();
+					int target = last + 1;
+					if (target > (total - 1)){
+						target = total - 1;
+					}
+					if (target + (last - first) > total - 1) {
+						downBtn.setEnabled(false);
+						downBtn.setImageDrawable(getResources().getDrawable(R.drawable.ci_arrowdown_gray));
+					}
+					if (target > 0){
+						upBtn.setEnabled(true);
+						upBtn.setImageDrawable(getResources().getDrawable(R.drawable.ci_arrowup));
+					}
+					if (N2DeviceInfo.EINK_NOOK) {
 						MotionEvent ev;
 						ev = MotionEvent.obtain(SystemClock.uptimeMillis(),
 								SystemClock.uptimeMillis(),
@@ -1542,20 +972,17 @@ public class PrefsActivity extends PreferenceActivity implements
 								MotionEvent.ACTION_UP, 200, 100, 0);
 						prefListView.dispatchTouchEvent(ev);
 					} else {
-						int total = prefListView.getCount();
-						int last = prefListView.getLastVisiblePosition();
-						if (total == last + 1)
-							return;
-						int target = last + 1;
-						if (target > (total - 1))
-							target = total - 1;
-						final int ftarget = target;
-						prefListView.clearFocus();
-						prefListView.post(new Runnable() {
-							public void run() {
-								prefListView.setSelection(ftarget);
-							}
-						});
+						if (total != last + 1) {
+
+
+							final int ftarget = target;
+							prefListView.clearFocus();
+							prefListView.post(new Runnable() {
+								public void run() {
+									prefListView.setSelection(ftarget);
+								}
+							});
+						}
 					}
 
 				}
@@ -1578,6 +1005,9 @@ public class PrefsActivity extends PreferenceActivity implements
 				break;
 			}
 		}
+        if (baseChange){
+            changed = true;
+        }
 		return changed;
 	}
 
@@ -1585,8 +1015,8 @@ public class PrefsActivity extends PreferenceActivity implements
 	private boolean isEqual(Object o1, Object o2) {
 		boolean equal = true;
 		if ((o1 instanceof Boolean) && (o2 instanceof Boolean)) {
-			boolean v1 = ((Boolean) o1).booleanValue();
-			boolean v2 = ((Boolean) o2).booleanValue();
+			boolean v1 = (Boolean) o1;
+			boolean v2 = (Boolean) o2;
 			if (v1 != v2)
 				equal = false;
 		} else if ((o1 instanceof String) && (o2 instanceof String)) {
@@ -1595,22 +1025,176 @@ public class PrefsActivity extends PreferenceActivity implements
 			if (!v1.equalsIgnoreCase(v2))
 				equal = false;
 		} else if ((o1 instanceof Integer) && (o2 instanceof Integer)) {
-			int v1 = ((Integer) o1).intValue();
-			int v2 = ((Integer) o2).intValue();
+			int v1 = (Integer) o1;
+			int v2 = (Integer) o2;
 			if (v1 != v2)
 				equal = false;
 		} else if ((o1 instanceof Float) && (o2 instanceof Float)) {
-			float v1 = ((Float) o1).floatValue();
-			float v2 = ((Float) o2).floatValue();
+			float v1 = (Float) o1;
+			float v2 = (Float) o2;
 			if (v1 != v2)
 				equal = false;
 		} else if ((o1 instanceof Long) && (o2 instanceof Long)) {
-			long v1 = ((Long) o1).longValue();
-			long v2 = ((Long) o2).longValue();
+			long v1 = (Long) o1;
+			long v2 = (Long) o2;
 			if (v1 != v2)
 				equal = false;
 		}
 		return equal;
 	}
+
+    private void checkSetDropboxAndOpds(String button, String key, SharedPreferences sharedPreferences) {
+        String[] buttonName = {"homeButtonDT", "homeButtonLT",
+                                "lruButtonDT", "lruButtonLT",
+                                "favButtonDT", "favButtonLT",
+                                "settingsButtonDT", "settingsButtonLT",
+                                "advancedButtonDT", "advancedButtonLT",
+                                "memButtonDT", "memButtonLT",
+                                "batButtonDT", "batButtonLT",
+                                "appFavButtonDT", "appFavButtonLT",
+                                "appAllButtonDT", "appAllButtonLT",
+                                "appLastButtonDT", "appLastButtonLT",
+                                "searchButtonDT", "searchButtonLT",
+                                "opdsSetButton", "dropboxSetButton",
+                                "ftpSetButton"};
+        boolean f_butt = false;
+        for (String aButtonName : buttonName) {
+            if (aButtonName.equals(button)) {
+                f_butt = true;
+                break;
+            }
+        }
+        if(!f_butt){
+            return;
+        }
+
+        boolean newOPDS = false;
+        boolean newDropbox = false;
+        boolean newFTP = false;
+        SharedPreferences.Editor editor = prefs.edit();
+
+        if("OPDS".equals(key)){
+            newOPDS = true;
+        }
+        if("DROPBOX".equals(key)){
+            newDropbox = true;
+        }
+        if("FTP".equals(key)){
+            newFTP = true;
+        }
+        if(!"dropboxSetButton".equals(button) && !"opdsSetButton".equals(button) && !"ftpSetButton".equals(button)){
+            // действия при выборе из меню кнопок экрана
+            do_pref_subrequest = false;
+            String tempValue = ((ListPreference) findPreference("dropboxSetButton")).getValue();
+            if(button.equals(tempValue)){
+                if(!key.equals("DROPBOX")){
+                    ((ListPreference) findPreference("dropboxSetButton")).setValueIndex(0);
+                    editor.putString("dropboxSetButton", "NOTHING");
+                }
+            }
+            if(button.equals(((ListPreference) findPreference("opdsSetButton")).getValue())){
+                if(!key.equals("OPDS")){
+                    ((ListPreference) findPreference("opdsSetButton")).setValueIndex(0);
+                    editor.putString("opdsSetButton", "NOTHING");
+                }
+            }
+            if(button.equals(((ListPreference) findPreference("ftpSetButton")).getValue())){
+                if(!key.equals("OPDS")){
+                    ((ListPreference) findPreference("ftpSetButton")).setValueIndex(0);
+                    editor.putString("ftpSetButton", "NOTHING");
+                }
+            }
+
+            // если новые настройки
+            if(newDropbox || newOPDS || newFTP){
+                //сбрасываем на всех остальных настройки
+                for (int i = 0, j=buttonName.length; i < j; i++) {
+                    if(!buttonName[i].equals(button)){
+                        // сбрасываем настройки если совпадают с проверяемыми
+                        if(sharedPreferences.getString(buttonName[i], "none").equals(key)){
+                            ((ListPreference) findPreference(buttonName[i])).setValueIndex(0);
+                            editor.putString(buttonName[i], "NOTHING");
+                        }
+                    }else{ // сохраняем настройки в модулях
+                        if(newOPDS){
+                            ((ListPreference) findPreference("opdsSetButton")).setValueIndex(i);
+                            editor.putString("opdsSetButton",buttonName[i]);
+                        }
+                        if(newDropbox){
+                            ((ListPreference) findPreference("dropboxSetButton")).setValueIndex(i);
+                            editor.putString("dropboxSetButton",buttonName[i]);
+                        }
+                        if(newFTP){
+                            ((ListPreference) findPreference("ftpSetButton")).setValueIndex(i);
+                            editor.putString("ftpSetButton",buttonName[i]);
+                        }
+                    }
+                }
+            }
+            editor.commit();
+            do_pref_subrequest = true;
+        }else {
+            // действия при выборе в самих настройках модулей
+            do_pref_subrequest = false;
+            int indexValue = 0;
+            if("dropboxSetButton".equals(button)){// если нажат выбор действия для DROPBOX
+                indexValue = ((ListPreference) findPreference(key)).findIndexOfValue("DROPBOX");
+                editor.putString(key, "DROPBOX");
+                if(sharedPreferences.getString("opdsSetButton", "none").equals(key)){
+                    ((ListPreference) findPreference("opdsSetButton")).setValueIndex(0);
+                    editor.putString("opdsSetButton", "NOTHING");
+                }
+                if(sharedPreferences.getString("ftpSetButton", "none").equals(key)){
+                    ((ListPreference) findPreference("ftpSetButton")).setValueIndex(0);
+                    editor.putString("ftpSetButton", "NOTHING");
+                }
+                button = key;
+                key = "DROPBOX";
+            }else if("opdsSetButton".equals(button)){// если нажат выбор действия для OPDS
+                indexValue = ((ListPreference) findPreference(key)).findIndexOfValue("OPDS");
+                editor.putString(key, "OPDS");
+                if(sharedPreferences.getString("dropboxSetButton", "none").equals(key)){
+                    ((ListPreference) findPreference("dropboxSetButton")).setValueIndex(0);
+                    editor.putString("dropboxSetButton", "NOTHING");
+                }
+                if(sharedPreferences.getString("ftpSetButton", "none").equals(key)){
+                    ((ListPreference) findPreference("ftpSetButton")).setValueIndex(0);
+                    editor.putString("ftpSetButton", "NOTHING");
+                }
+                button = key;
+                key = "OPDS";
+            }else if("ftpSetButton".equals(button)){// если нажат выбор действия для FTP
+                indexValue = ((ListPreference) findPreference(key)).findIndexOfValue("FTP");
+                editor.putString(key, "FTP");
+                if(sharedPreferences.getString("dropboxSetButton", "none").equals(key)){
+                    ((ListPreference) findPreference("dropboxSetButton")).setValueIndex(0);
+                    editor.putString("dropboxSetButton", "NOTHING");
+                }
+                if(sharedPreferences.getString("opdsSetButton", "none").equals(key)){
+                    ((ListPreference) findPreference("opdsSetButton")).setValueIndex(0);
+                    editor.putString("opdsSetButton", "NOTHING");
+                }
+                button = key;
+                key = "FTP";
+            }
+            //сбрасываем на всех остальных настройки
+            if("OPDS".equals(key) || "DROPBOX".equals(key) || "FTP".equals(key)){
+                for (String aButtonName : buttonName) {
+                    if (!aButtonName.equals(button)) {
+                        // сбрасываем настройки если совпадают с проверяемыми
+                        if (sharedPreferences.getString(aButtonName, "NOTHING").equals(key)) {
+                            ((ListPreference) findPreference(aButtonName)).setValueIndex(0);
+                            editor.putString(aButtonName, "NOTHING");
+                        }
+                    }
+                }
+                ((ListPreference) findPreference(button)).setValueIndex(indexValue);
+                editor.commit();
+            }
+            do_pref_subrequest = true;
+        }
+
+    }
+
 
 }
